-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0
-
None
-
b86216cc4c3a97d21a7b7fac0f0cf0a550d06b01
After running macdeployqt APP_BUNDLE we have to manually copy plugins/iconengines/libqsvgicon.dylib to APP_BUNDLE
Also from code [1] it seems "deployPlugins()" does not take into account "plugins/iconengines"
[1] http://code.qt.io/cgit/qt/qttools.git/tree/src/macdeployqt/shared/shared.cpp?h=dev#n1015
For Gerrit Dashboard: QTBUG-59609 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
195317,2 | Deploy the iconengines with the application | 5.9 | qt/qttools | Status: MERGED | +2 | 0 |