Deploy the iconengines with the application

The iconengines should be deployed automatically since they could be
used by the application without needing to explicitly include their
dependency in the application. This brings it in line with what
windeployqt does too.

[ChangeLog][Platform Specific Changes][macOS] iconengines are deployed
with the application when using macdeployqt.

Task-number: QTBUG-59609
Change-Id: I7fd3bf9d55d2979f30a2ad7959a6a31919d49c8c
Reviewed-by: Jake Petroules <jake.petroules@qt.io>